--- a/public/client.css
+++ b/public/client.css
@@ -1,5 +1,19 @@
+html {
+  background-color: black;
+}
+
+body {
+  display: flex;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #messages {
-  position: fixed;
+  border: 2px solid black;
+  border-top: none;
+  box-sizing: border-box;
+  background-color: rgb(238, 238, 238);
   bottom: 100px;
   list-style-type: none;
   margin: 0;
@@ -13,22 +27,24 @@
   padding: 5px 10px;
 }
 #form {
-  background: #000;
-  padding: 3px;
+  display: flex;
   width: fit-content;
-  position: fixed;
-  bottom: 0;
 }
 #input {
-  border: none;
+  width: 900px;
+  height: 38px;
+  border: 2px solid black;
+  box-sizing: border-box;
+  border-top: none;
   padding: 10px;
-  width: 1000px;
 }
 #submit {
-  width: 9%;
-  background: rgb(130, 224, 255);
+  width: 100px;
+  height: 38px;
   border: none;
-  padding: 10px;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  background: rgb(238, 238, 238);
 }
 #gameRoom {
   display: block;
@@ -43,4 +59,119 @@
   width: 200px;
   height: 200px;
   background-color: white;
+}
+#lobbyTopContain {
+  display: flex;
+}
+#gameEnteranceContain {
+  border: 2px solid black;
+  box-sizing: border-box;
+  width: 1000px;
+  height: 520px;
+  background-color: rgb(118, 157, 197);
+}
+
+.lobbyTop {
+  border: 2px solid black;
+  border-bottom: none;
+  box-sizing: border-box;
+  display: inline-flex;
+  width: 140px;
+  height: 38px;
+  font-size: 24px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(118, 157, 196);
+  margin-right: 10px;
+}
+
+.gameRoomEnterance {
+  display: inline-flex;
+  width: fit-content;
+  justify-content: center;
+  margin-top: 30px;
+  margin-left: 40px;
+  margin-right: 40px;
+  align-items: center;
+  height: 80px;
+  background-color: rgb(235, 235, 235);
+  border-radius: 10px;
+}
+.enteracneTitle {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 23px;
+}
+
+.enteracneInfo {
+  color: gray;
+}
+
+.enteracneTitleAndInfo {
+  width: 250px;
+}
+
+.enteracneMemberAndIsPasswordRoom {
+  width: 70px;
+}
+
+.enteracneNumber {
+  font-size: 27px;
+  text-align: center;
+  width: 80px;
+}
+
+.enteracneMemberInfo {
+  font-size: 27px;
+}
+
+#left {
+  display: inline-block;
+  width: fit-content;
+  margin-top: 38px;
+  height: 708px;
+  background-color: white;
+}
+
+#ranking {
+  width: 200px;
+  height: 520px;
+  box-sizing: border-box;
+  border-bottom: 2px solid black;
+}
+
+#myInfo {
+  display: flex;
+  width: 200px;
+  height: 188px;
+  background-color: rgb(217, 217, 217);
+  box-sizing: border-box;
+  border-bottom: 2px solid black;
+}
+
+#right {
+  display: inline-block;
+  width: fit-content;
+}
+
+#myCharacter {
+  display: inline-block;
+  height: fit-content;
+  padding-top: 30px;
+  padding-left: 10px;
+}
+
+#myNickname {
+  margin-bottom: 10px;
+}
+
+#nicknameAndLevel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100px;
+  height: 88px;
+  font-size: 12px;
+  padding-top: 30px;
+  padding-left: 10px;
 }
